# python-pbdm

./: .gitignore  README.md  copying.txt  pyproject.toml  sample.py
docs/: functions.md  odes.md
pbdm/abstract/: _structured_ports.py  population_objects.py  structured_objects.py
pbdm/age_structure/: __init__.py  base.py  helpers.py  objects.py
pbdm/api/: build_data.py
pbdm/core/: base.py
pbdm/interface/: bdfs.py  functional_population.py  interactions.py  processes.py  spec_builders.py
pbdm/interface/core/: __init__.py  coerce.py  dynamics.py  functions.py  helpers.py  odes.py  populations.py  processes.py
pbdm/population_modelling/: _structured_ports.py  dynamics.py  functions.py  odes.py  population.py  processes.py
pbdm/population_modelling/dynamics/: __init__.py  dynamics.py
pbdm/population_modelling/dynamics/models/: distributed_delay.py
tests/: test_age_structured_functions.py  test_age_structured_odes.py  test_distributed_delay.py  test_interface_bdfs.py  test_structured_helpers.py  test_structured_objects.py  test_structured_variable_population_object.py
